[tool.poetry]
name = "cache-money"
version = "1.1.0"
description = "Async cache decorator for memoization using aioredis."
authors = ["Alexandre Jutras <alexandre.jutras@novisto.com>", "Marc-André Dufresne <marc-andre.dufresne@novisto.com"]
maintainers = ["Alexandre Jutras <alexandre.jutras@novisto.com>", "Marc-André Dufresne <marc-andre.dufresne@novisto.com"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/novisto/cache-money"
keywords = ["redis", "cache", "async"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8"
]

packages = [
    {include = "cache_money"}
]

[tool.poetry.dependencies]
python = "^3.8"
aioredis = "^2.0.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-xdist = "^2.3.0"
coverage = "^5.5"
flake8 = "^3.9.2"
black = "^21.7b0"
flake8-black = "^0.2.3"
isort = {version = "^5.9.3", extras = ["pyproject"]}
flake8-isort = "^4.0.0"
flake8-docstrings = "^1.6.0"
autoflake = "^1.4"
pytest-asyncio = "^0.15.1"
flake8-breakpoint = "^1.1.0"
flake8-print = "^4.0.0"


[tool.black]
line-length = 120


[tool.isort]
line_length = 120
multi_line_output = 3
use_parentheses = true
case_sensitive = true
include_trailing_comma = true


[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"
