[tool.poetry]
name = "cache-money"
version = "1.1.0"
description = "Async cache decorator for memoization using aioredis."
authors = ["Alexandre Jutras <alexandre.jutras@novisto.com>", "Marc-André Dufresne <marc-andre.dufresne@novisto.com"]
maintainers = ["Alexandre Jutras <alexandre.jutras@novisto.com>", "Marc-André Dufresne <marc-andre.dufresne@novisto.com"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/novisto/cache-money"
keywords = ["redis", "cache", "async"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

packages = [
    {include = "cache_money"}
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
redis = "^4.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.2.0"
coverage = "^7.1.0"
flake8 = "^6.0.0"
black = "^23.1.0"
flake8-black = "^0.3.6"
isort = {extras = ["pyproject"], version = "^5.12.0"}
flake8-isort = "^6.0.0"
flake8-docstrings = "^1.7.0"
autoflake = "^2.0.1"
pytest-asyncio = "^0.20.3"
flake8-breakpoint = "^1.1.0"
flake8-print = "^5.0.0"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
use_parentheses = true
case_sensitive = true
include_trailing_comma = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
