[tool.poetry]
name = "cache-money"
version = "1.3.0"
description = "Async cache decorator for memoization using aioredis."
authors = ["Alexandre Jutras <alexandre.jutras@novisto.com>", "Marc-André Dufresne <marc-andre.dufresne@novisto.com"]
maintainers = ["Alexandre Jutras <alexandre.jutras@novisto.com>", "Marc-André Dufresne <marc-andre.dufresne@novisto.com"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/novisto/cache-money"
keywords = ["redis", "cache", "async"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

packages = [
    {include = "cache_money"}
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
redis = "^4.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
pytest-asyncio = "^0.23.7"
coverage = "^7.6.0"
ruff = "^0.5.2"

[tool.ruff]
line-length = 120
extend-exclude = ["examples"]

[tool.ruff.lint]
select = [
    "F",
    "E",
    "T20",
    "I",
    "T10"
]
ignore = []
unfixable = ["F841"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "E203"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "lf"  # Use `\n` line endings for all files
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
